# aj

./: .gitmodules
.github/workflows/: observability-deploy.yml
aj-bot/: pyproject.toml
aj-bot/scripts/: create-init.bash  logger.bash  test.bash
aj-bot/src/aj_bot/: bot-gemini.py  main.py  runner.py
aj-bot/src/aj_bot/models/: info.py
aj-bot/src/aj_bot/prompts/: base_prompt.py
aj-bot/src/aj_bot/routes/: info.py
aj-utilities/: pyproject.toml
aj-utilities/src/utilities/: __init__.py  config.py  db.py  env_vars.py  logger.py
alphine-uv-test/: .dockerignore  Docker-base  Dockerfile  pyproject.toml
observability/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  TRACING.md  pyproject.toml
observability/app/: __init__.py  main.py  settings.py  tracing.py
observability/app/api/routers/: greet.py
observability/app/models/: greet.py
observability/k8s/: README.md  deployment.yaml  ingress.yaml  service-account.yaml
webrtc/: .dockerignore  .gitignore  Dockerfile  README-WEBRTC-SERVER.md  README-deployment.md  aj-webrtc-server.yaml  aj-webrtc-stunner.yaml  client.html  deploy.sh  docker-compose.yaml  logger.ts  nginx.conf  package-lock.json  package.json  server.ts  tsconfig.json  utils.ts  vitest.config.ts  webrtc-server-example.ts  webrtc-server-manager.test.ts  webrtc-server-manager.ts
webrtc-client/: README.md  package.json  tsconfig.json
webrtc-client/public/: index.html
webrtc-client/public/css/: styles.css
webrtc-client/src/: main.ts
webrtc-client/src/components/: UIController.ts  WebRTCClient.ts
webrtc-client/src/services/: MediaHandler.ts  SignalingService.ts  StateManager.ts
webrtc-client/src/types/: index.ts
webrtc/tests/: setup.ts  utils.test.ts
