[project]
name = "utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohit sharma", email = "mohitlakshya@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "structlog>=25.4.0",
]

[project.scripts]
utilities = "utilities:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
