[project]
name = "utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohit sharma", email = "mohitlakshya@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "pydantic>=2.11.9",
    "sqlalchemy[asyncpg]>=2.0.43",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy[asyncpg]>=2.0.0",
]

[project.scripts]
utilities = "utilities:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
