[project]
name = "alphine-uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-exporter-gcp-trace>=1.9.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.9",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
