[project]
name = "observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "opentelemetry-propagator-gcp>=1.6.0",
    "opentelemetry-exporter-gcp-monitoring>=1.6.0",
  "opentelemetry-resourcedetector-gcp>=1.6.0",
    "google-cloud-trace>=1.13.0",
    "google-cloud-monitoring>=2.21.0",
    "requests>=2.32,<3.0",
]
